// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast extracts geometry quad symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": false,
      "symbols": Array [
        "QUAD",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [
            "const",
          ],
        },
      },
    },
  ],
  "externals": Array [],
  "functions": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadUV",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuad",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuad",
      ],
    },
  ],
  "hash": "apf7kbgdle",
  "modules": Array [
    Object {
      "imports": Array [
        Object {
          "imported": "MeshVertex",
          "name": "MeshVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "MeshVertex",
      ],
    },
  ],
  "refs": Array [
    Object {
      "imports": Array [
        Object {
          "imported": "MeshVertex",
          "name": "MeshVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "MeshVertex",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuadUV",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "getQuad",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getQuad",
      ],
    },
    Object {
      "exported": false,
      "symbols": Array [
        "QUAD",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [
            "const",
          ],
        },
      },
    },
  ],
  "symbols": Array [
    "MeshVertex",
    "getQuadIndex",
    "getQuadUV",
    "getQuad",
    "QUAD",
  ],
  "visibles": Array [
    "getQuadIndex",
    "getQuadUV",
    "getQuad",
  ],
}
`;

exports[`ast extracts quad fragment declarations 1`] = `
Array [
  Object {
    "exported": false,
    "symbols": Array [
      "fragColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "fragUV",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragUV",
        },
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
]
`;

exports[`ast extracts quad vertex declarations 1`] = `
Array [
  Object {
    "exported": false,
    "prototype": Object {
      "name": "getPosition",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "symbols": Array [
      "getPosition",
    ],
  },
  Object {
    "exported": false,
    "prototype": Object {
      "name": "getSize",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
    "symbols": Array [
      "getSize",
    ],
  },
  Object {
    "exported": false,
    "symbols": Array [
      "fragColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "fragUV",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragUV",
        },
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "out",
        ],
      },
    },
  },
]
`;

exports[`ast extracts quad vertex functions 1`] = `
Array [
  Object {
    "exported": false,
    "prototype": Object {
      "name": "main",
      "parameters": Array [],
      "type": Object {
        "name": "void",
        "qualifiers": Array [],
      },
    },
    "symbols": Array [
      "main",
    ],
  },
]
`;

exports[`ast extracts quad vertex imports 1`] = `
Array [
  Object {
    "imports": Array [
      Object {
        "imported": "MeshVertex",
        "name": "MeshVertex",
      },
    ],
    "name": "use/types",
    "symbols": Array [
      "MeshVertex",
    ],
  },
  Object {
    "imports": Array [
      Object {
        "imported": "viewUniforms",
        "name": "viewUniforms",
      },
      Object {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
    ],
    "name": "use/view",
    "symbols": Array [
      "viewUniforms",
      "worldToClip",
    ],
  },
  Object {
    "imports": Array [
      Object {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "geometry/quad",
    "symbols": Array [
      "getQuadUV",
    ],
  },
]
`;

exports[`ast extracts quad vertex symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getSize",
      ],
    },
    Object {
      "exported": false,
      "symbols": Array [
        "fragColor",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": null,
            "name": "fragColor",
          },
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [
            "layout(location = 0)",
            "out",
          ],
        },
      },
    },
    Object {
      "exported": false,
      "symbols": Array [
        "fragUV",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": null,
            "name": "fragUV",
          },
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [
            "layout(location = 1)",
            "out",
          ],
        },
      },
    },
  ],
  "externals": Array [
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getSize",
      ],
    },
  ],
  "functions": Array [
    Object {
      "exported": false,
      "prototype": Object {
        "name": "main",
        "parameters": Array [],
        "type": Object {
          "name": "void",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "main",
      ],
    },
  ],
  "hash": "81l7mnms8t",
  "modules": Array [
    Object {
      "imports": Array [
        Object {
          "imported": "MeshVertex",
          "name": "MeshVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "MeshVertex",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
      ],
      "name": "use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "refs": Array [
    Object {
      "imports": Array [
        Object {
          "imported": "MeshVertex",
          "name": "MeshVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "MeshVertex",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
      ],
      "name": "use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
      ],
    },
    Object {
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "main",
        "parameters": Array [],
        "type": Object {
          "name": "void",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "main",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "exported": false,
      "prototype": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "getSize",
      ],
    },
    Object {
      "exported": false,
      "symbols": Array [
        "fragColor",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": null,
            "name": "fragColor",
          },
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [
            "layout(location = 0)",
            "out",
          ],
        },
      },
    },
    Object {
      "exported": false,
      "symbols": Array [
        "fragUV",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": null,
            "name": "fragUV",
          },
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [
            "layout(location = 1)",
            "out",
          ],
        },
      },
    },
  ],
  "symbols": Array [
    "MeshVertex",
    "viewUniforms",
    "worldToClip",
    "getQuadUV",
    "main",
    "getPosition",
    "getSize",
    "fragColor",
    "fragUV",
  ],
  "visibles": Array [],
}
`;

exports[`ast extracts test declarations 1`] = `
Array [
  Object {
    "exported": false,
    "symbols": Array [
      "x",
      "y",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "x",
        },
        Object {
          "expr": null,
          "name": "y",
        },
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
  },
  Object {
    "exported": false,
    "symbols": Array [
      "a",
      "b",
      "c",
      "d",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "3",
          "name": "a",
        },
        Object {
          "expr": "1",
          "name": "b",
        },
        Object {
          "expr": null,
          "name": "c",
        },
        Object {
          "expr": null,
          "name": "d",
        },
      ],
      "type": Object {
        "name": "int",
        "qualifiers": Array [],
      },
    },
  },
]
`;

exports[`ast extracts test declarations with array 1`] = `
Array [
  Object {
    "exported": false,
    "symbols": Array [
      "QUAD",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "ivec2(0, 0)",
          "name": "QUAD",
        },
      ],
      "type": Object {
        "name": "ivec2",
        "qualifiers": Array [
          "const",
        ],
      },
    },
  },
]
`;

exports[`ast extracts use types symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": true,
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "externals": Array [],
  "functions": Array [],
  "hash": "4qg47iyqm",
  "modules": Array [],
  "refs": Array [
    Object {
      "exported": true,
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "symbols": Array [
    "MeshVertex",
  ],
  "visibles": Array [
    "MeshVertex",
  ],
}
`;

exports[`ast extracts use view declarations 1`] = `
Array [
  Object {
    "exported": true,
    "struct": Object {
      "name": "viewUniforms",
      "struct": Object {
        "members": Array [
          Object {
            "name": "projectionMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewPosition",
            "type": Object {
              "name": "vec4",
            },
          },
          Object {
            "name": "viewResolution",
            "type": Object {
              "name": "vec2",
            },
          },
        ],
      },
      "type": Object {
        "name": "ViewUniforms",
        "qualifiers": Array [
          "layout(set = 0, binding = 0)",
          "uniform",
        ],
      },
    },
    "symbols": Array [
      "viewUniforms",
      "ViewUniforms",
    ],
  },
]
`;

exports[`ast extracts use view symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "exported": true,
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = 0, binding = 0)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
  ],
  "externals": Array [],
  "functions": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToClip",
      ],
    },
  ],
  "hash": "mbei1rzda7",
  "modules": Array [],
  "refs": Array [
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "exported": true,
      "prototype": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "symbols": Array [
        "worldToClip",
      ],
    },
    Object {
      "exported": true,
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = 0, binding = 0)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
  ],
  "symbols": Array [
    "worldToView",
    "viewToClip",
    "worldToClip",
    "viewUniforms",
    "ViewUniforms",
  ],
  "visibles": Array [
    "worldToView",
    "viewToClip",
    "worldToClip",
    "viewUniforms",
    "ViewUniforms",
  ],
}
`;

exports[`ast rewrites code using the AST 1`] = `
"
    float _zz_getValue(int index);
    void entryPoint() {
      float x = 3.0;
      float y = _zz_getValue(2);
    }
    "
`;

exports[`ast rewrites code using the compressed AST 1`] = `
Array [
  Array [
    "Identifier",
    11,
    19,
  ],
  Array [
    "Identifier",
    24,
    29,
  ],
  Array [
    "Identifier",
    41,
    45,
  ],
  Array [
    "Identifier",
    62,
    63,
  ],
  Array [
    "Identifier",
    83,
    84,
  ],
  Array [
    "Identifier",
    87,
    95,
  ],
  Array [
    "Identifier",
    111,
    112,
  ],
  Array [
    "Identifier",
    120,
    121,
  ],
]
`;

exports[`ast rewrites code using the compressed AST 2`] = `
Object {
  "cursor": [Function],
}
`;
